<resources>
    <string name="app_name">Calculator</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="dot">.</string>
    <string name="multiplication_sign">x</string>
    <string name="division_sign">/</string>
    <string name="addition_sign">+</string>
    <string name="subtraction_sign">-</string>
    <string name="degree_sign">^</string>
    <string name="equal_sign">=</string>
    <string name="cleaner">C</string>
    <string name="opening_bracket">(</string>
    <string name="closing_bracket">)</string>
    <string name="number_1" translatable="false">1</string>
    <string name="result">Result</string>
    <string name="ce">CE</string>
    <string name="plush_slash_minus">±</string>
    <string name="night">Night Mode </string>
    <string name="day">Day Mode</string>
    <string name="night_mode_switch_off">Off</string>
    <string name="night_mode_switch_on">On</string>
    <string name="settings">settings</string>
    <string name="day_mode">Day mode</string>
    <string name="night_mode">Night mode</string>
</resources>