<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_gears_5193383" />

    <EditText
        android:id="@+id/work_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="2+2"
        android:background="#ffffff"
        android:ems="15"
        android:gravity="center"
        android:hint="2+2"
        android:inputType="none"
        android:keyboardNavigationCluster="false"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/grid_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center"
        android:hint="Result"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/grid_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/work_field" />


    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Theme.NumberButton"
            android:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatButton android:visibility="invisible" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clear_text"
            style="@style/Theme.NonNumber"
            android:text="@string/cleaner" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/remove"
            style="@style/Theme.NonNumber"
            android:gravity="center"
            android:drawableStart="@drawable/ic_baseline_backspace_24"
            android:paddingStart="30dp"
            app:iconGravity="textStart" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number_1"
            style="@style/Theme.NumberButton"
            android:text="@string/number_1" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number_2"
            style="@style/Theme.NumberButton"
            android:text="@string/number_2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number_3"
            style="@style/Theme.NumberButton"
            android:text="@string/number_3" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/division"
            style="@style/Theme.NonNumber"
            android:text="@string/division_sign" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number_4"
            style="@style/Theme.NumberButton"
            android:text="@string/number_4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number_5"
            style="@style/Theme.NumberButton"
            android:text="@string/number_5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number_6"
            style="@style/Theme.NumberButton"
            android:text="@string/number_6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/multiplication"
            style="@style/Theme.NonNumber"
            android:text="@string/multiplication_sign" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number_7"
            style="@style/Theme.NumberButton"
            android:text="@string/number_7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number_8"
            style="@style/Theme.NumberButton"
            android:text="@string/number_8" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/number_9"
            style="@style/Theme.NumberButton"
            android:text="@string/number_9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addition"
            style="@style/Theme.NonNumber"
            android:text="@string/addition_sign" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dot"
            style="@style/Theme.NonNumber"
            android:text="@string/dot" />

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/number_0"
            style="@style/Theme.NumberButton"
            android:text="@string/number_0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/equal"
            style="@style/Theme.NonNumber"

            android:text="@string/equal_sign" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/subtraction"
            style="@style/Theme.NonNumber"

            android:text="@string/subtraction_sign" />

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
